[gd_scene load_steps=24 format=3 uid="uid://bb834fy7j5c0q"]

[ext_resource type="Script" path="res://scripts/rocky_planet.gd" id="1_08tb2"]
[ext_resource type="Shader" path="res://scripts/map/rockyplanet.gdshader" id="1_qey08"]
[ext_resource type="Texture2D" uid="uid://dpjphqaiqxewx" path="res://icon_eye_opened.svg" id="3_4ft83"]
[ext_resource type="Texture2D" uid="uid://dvd0e741j6d3q" path="res://icon_eye_closed.svg" id="4_mu5de"]
[ext_resource type="Texture2D" uid="uid://yfjg2ag3smdb" path="res://icon_camera.svg" id="5_o5fgk"]
[ext_resource type="Texture2D" uid="uid://dvfo16l0gpowv" path="res://icon_flash.svg" id="6_0g8as"]
[ext_resource type="Script" path="res://scripts/map/stars.gd" id="7_wthn5"]

[sub_resource type="Gradient" id="Gradient_0ytmj"]
offsets = PackedFloat32Array(0.542714, 1)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_svqfy"]
noise_type = 2
frequency = 0.0193

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_1ii2a"]
seamless = true
color_ramp = SubResource("Gradient_0ytmj")
noise = SubResource("FastNoiseLite_svqfy")

[sub_resource type="Gradient" id="Gradient_sapp1"]
offsets = PackedFloat32Array(0.477387, 0.718593)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_dax4i"]
noise_type = 0
frequency = 0.0039

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_nryou"]
seamless = true
color_ramp = SubResource("Gradient_sapp1")
noise = SubResource("FastNoiseLite_dax4i")

[sub_resource type="FastNoiseLite" id="FastNoiseLite_y4xar"]
frequency = 0.0087

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_suiyf"]
seamless = true
noise = SubResource("FastNoiseLite_y4xar")

[sub_resource type="Gradient" id="Gradient_edghu"]
offsets = PackedFloat32Array(0.502513, 0.78392, 1)
colors = PackedColorArray(0, 0, 0, 1, 0.343434, 0.343434, 0.343434, 1, 1, 1, 1, 1)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_fjh6d"]
noise_type = 2
frequency = 0.0524

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_saofp"]
seamless = true
color_ramp = SubResource("Gradient_edghu")
noise = SubResource("FastNoiseLite_fjh6d")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0fwbt"]
shader = ExtResource("1_qey08")
shader_parameter/shine_offset = 0.716
shader_parameter/ocean_depth = 0.52
shader_parameter/speed = 0.1
shader_parameter/ice_coverage = 0.671
shader_parameter/cloud_opacity = 1.0
shader_parameter/desert_patches = 1.0
shader_parameter/atmosphere_opacity = 0.54
shader_parameter/mtn_snow_height = 0.886
shader_parameter/desert_color = Color(0.725585, 0.576183, 0.157407, 1)
shader_parameter/ground_color = Color(0.359365, 0.709098, 0.163673, 1)
shader_parameter/ocean_color = Color(0.00316864, 0.317994, 0.792011, 1)
shader_parameter/cloud_color = Color(1, 1, 1, 1)
shader_parameter/desert_texture = SubResource("NoiseTexture2D_suiyf")
shader_parameter/cloud_texture = SubResource("NoiseTexture2D_1ii2a")
shader_parameter/cloud_texture2 = SubResource("NoiseTexture2D_nryou")
shader_parameter/ice_texture = SubResource("NoiseTexture2D_saofp")

[sub_resource type="Theme" id="Theme_23yx4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_50wve"]
bg_color = Color(0.103743, 0.103744, 0.103744, 1)

[sub_resource type="Theme" id="Theme_funtb"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2w0b5"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
bg_color = Color(0.103744, 0.103744, 0.103743, 1)

[node name="RockyPlanet" type="Node2D"]
script = ExtResource("1_08tb2")

[node name="StarField" type="Node2D" parent="."]
script = ExtResource("7_wthn5")

[node name="Sliders" type="VBoxContainer" parent="."]
offset_left = -232.0
offset_top = 254.0
offset_right = 280.0
offset_bottom = 294.0

[node name="Planet" type="Button" parent="."]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_0fwbt")
custom_minimum_size = Vector2(512, 512)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_top = -255.0
offset_right = 256.0
offset_bottom = 257.0
grow_horizontal = 2
grow_vertical = 2

[node name="Camera" type="Camera2D" parent="."]
unique_name_in_owner = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ParamPanel" type="PanelContainer" parent="CanvasLayer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(256, 0)
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -103.5
offset_right = 256.0
offset_bottom = 103.5
grow_vertical = 2
theme = SubResource("Theme_23yx4")
theme_override_styles/panel = SubResource("StyleBoxFlat_50wve")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/ParamPanel"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/ParamPanel/MarginContainer"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/ParamPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 10
columns = 2

[node name="ShineLabel" type="Label" parent="CanvasLayer/ParamPanel/MarginContainer/VBoxContainer/GridContainer"]
visible = false
layout_mode = 2
text = "Light Offset"

[node name="ShineSlider" type="HSlider" parent="CanvasLayer/ParamPanel/MarginContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.01

[node name="OceanLabel" type="Label" parent="CanvasLayer/ParamPanel/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Ocean
"

[node name="OceanDepthSlider" type="HSlider" parent="CanvasLayer/ParamPanel/MarginContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.01

[node name="IceLabel" type="Label" parent="CanvasLayer/ParamPanel/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Ice
"

[node name="IceSlider" type="HSlider" parent="CanvasLayer/ParamPanel/MarginContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.01

[node name="Label2" type="Label" parent="CanvasLayer/ParamPanel/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Atmosphere"

[node name="AtmosSlider" type="HSlider" parent="CanvasLayer/ParamPanel/MarginContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.01

[node name="Label3" type="Label" parent="CanvasLayer/ParamPanel/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Clouds
"

[node name="CloudSlider" type="HSlider" parent="CanvasLayer/ParamPanel/MarginContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.1

[node name="Label4" type="Label" parent="CanvasLayer/ParamPanel/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Cloud Dense
"

[node name="CloudSlider2" type="HSlider" parent="CanvasLayer/ParamPanel/MarginContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.02

[node name="MtnSnowLabel" type="Label" parent="CanvasLayer/ParamPanel/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Mtn Snow
"

[node name="MtnSnowSlider" type="HSlider" parent="CanvasLayer/ParamPanel/MarginContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.2
step = -0.02
value = 1.0

[node name="DesertLabel" type="Label" parent="CanvasLayer/ParamPanel/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Deserts"

[node name="DesertButton" type="CheckButton" parent="CanvasLayer/ParamPanel/MarginContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="RandParamsButton" type="Button" parent="CanvasLayer/ParamPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Random Parameters"

[node name="ResetButton" type="Button" parent="CanvasLayer/ParamPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Regenerate Noise"

[node name="ColorPanel" type="PanelContainer" parent="CanvasLayer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(256, 0)
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -256.0
offset_top = -76.0
offset_bottom = 76.0
grow_horizontal = 0
grow_vertical = 2
theme = SubResource("Theme_funtb")
theme_override_styles/panel = SubResource("StyleBoxFlat_50wve")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/ColorPanel"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/ColorPanel/MarginContainer"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/ColorPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 10
columns = 2

[node name="GroundCLabel" type="Label" parent="CanvasLayer/ColorPanel/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Ground"

[node name="GroundColor" type="ColorPickerButton" parent="CanvasLayer/ColorPanel/MarginContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="DesertCLabel" type="Label" parent="CanvasLayer/ColorPanel/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Desert
"

[node name="DesertColor" type="ColorPickerButton" parent="CanvasLayer/ColorPanel/MarginContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="SkyCLabel" type="Label" parent="CanvasLayer/ColorPanel/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Sky"

[node name="SkyColor" type="ColorPickerButton" parent="CanvasLayer/ColorPanel/MarginContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="CloudCLabel2" type="Label" parent="CanvasLayer/ColorPanel/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Cloud"

[node name="CloudColor" type="ColorPickerButton" parent="CanvasLayer/ColorPanel/MarginContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="RandColorButton" type="Button" parent="CanvasLayer/ColorPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Random Color"

[node name="ShareButton" type="Button" parent="CanvasLayer/ColorPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Share Planet"

[node name="PresetPanel" type="PanelContainer" parent="CanvasLayer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(256, 0)
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -140.0
offset_top = -80.0
offset_right = 140.0
offset_bottom = -29.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 8
theme = SubResource("Theme_funtb")
theme_override_styles/panel = SubResource("StyleBoxFlat_50wve")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/PresetPanel"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/PresetPanel/MarginContainer"]
layout_mode = 2

[node name="EarthButton" type="Button" parent="CanvasLayer/PresetPanel/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Earth"

[node name="MarsButton" type="Button" parent="CanvasLayer/PresetPanel/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Mars"

[node name="RandomButton" type="Button" parent="CanvasLayer/PresetPanel/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Random"

[node name="DisplayPanel" type="PanelContainer" parent="CanvasLayer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(25, 25)
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -50.0
offset_bottom = 50.0
grow_horizontal = 0
size_flags_horizontal = 8
size_flags_vertical = 0
tooltip_text = "Hide Controls"
theme_override_styles/panel = SubResource("StyleBoxFlat_2w0b5")

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/DisplayPanel"]
clip_contents = true
layout_mode = 2

[node name="VisibilityButton" type="TextureButton" parent="CanvasLayer/DisplayPanel/HBoxContainer"]
unique_name_in_owner = true
clip_contents = true
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("3_4ft83")
texture_pressed = ExtResource("4_mu5de")
ignore_texture_size = true
stretch_mode = 0

[node name="CameraButton" type="TextureButton" parent="CanvasLayer/DisplayPanel/HBoxContainer"]
unique_name_in_owner = true
clip_contents = true
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture_normal = ExtResource("5_o5fgk")
texture_pressed = ExtResource("6_0g8as")
ignore_texture_size = true
stretch_mode = 0

[node name="NotifyPanel" type="PanelContainer" parent="CanvasLayer"]
unique_name_in_owner = true
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -48.0
offset_right = 48.0
offset_bottom = 40.0
grow_horizontal = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/NotifyPanel"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="NotifyLabel" type="Label" parent="CanvasLayer/NotifyPanel/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Loading..."
horizontal_alignment = 1

[node name="CreditsPanel" type="PanelContainer" parent="CanvasLayer"]
unique_name_in_owner = true
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -394.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/CreditsPanel"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 5

[node name="Label" type="Label" parent="CanvasLayer/CreditsPanel/MarginContainer"]
layout_mode = 2
text = "Sublight Planets by @fritzy — © 2024 Nathan Fritz"
